// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button.svelte > should render a button marked as primary 1`] = `
<div>
  <button
    class="flex flex-row items-center is-primary"
    type="submit"
  >
    <!---->
     
    <!---->
    <p>
      Primary
    </p>
    
    <!---->
     
    <!---->
  </button>
  
</div>
`;

exports[`Button.svelte > should render a button with a label 1`] = `
<div>
  <button
    class="flex flex-row items-center "
    type="submit"
  >
    <!---->
     
    <!---->
    <p>
      Click me
    </p>
    
    <!---->
     
    <!---->
  </button>
  
</div>
`;

exports[`Button.svelte > should render a button with a label and both icons 1`] = `
<div>
  <button
    class="flex flex-row items-center "
    type="submit"
  >
    <icon-left
      class="flex flex-row"
    >
      <rkt-icon
        aria-label="email"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="email"
        />
      </rkt-icon>
      <!---->
    </icon-left>
    <!---->
     
    <!---->
    <p>
      Dual Icons
    </p>
    
    <!---->
     
    <icon-right>
      <rkt-icon
        aria-label="arrow-right"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="arrow-right"
        />
      </rkt-icon>
      <!---->
    </icon-right>
    <!---->
  </button>
  
</div>
`;

exports[`Button.svelte > should render a button with a label and left icon 1`] = `
<div>
  <button
    class="flex flex-row items-center "
    type="submit"
  >
    <icon-left
      class="flex flex-row"
    >
      <rkt-icon
        aria-label="theme"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="theme"
        />
      </rkt-icon>
      <!---->
    </icon-left>
    <!---->
     
    <!---->
    <p>
      With Left Icon
    </p>
    
    <!---->
     
    <!---->
  </button>
  
</div>
`;

exports[`Button.svelte > should render a button with a label and right icon 1`] = `
<div>
  <button
    class="flex flex-row items-center "
    type="submit"
  >
    <!---->
     
    <!---->
    <p>
      With Right Icon
    </p>
    
    <!---->
     
    <icon-right>
      <rkt-icon
        aria-label="arrow-right"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="arrow-right"
        />
      </rkt-icon>
      <!---->
    </icon-right>
    <!---->
  </button>
  
</div>
`;

exports[`Button.svelte > should render a button with icon only 1`] = `
<div>
  <button
    class="flex flex-row items-center "
    type="submit"
  >
    <icon-left
      class="flex flex-row"
    >
      <rkt-icon
        aria-label="colors"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="colors"
        />
      </rkt-icon>
      <!---->
    </icon-left>
    <!---->
     
    <!---->
    
    <!---->
     
    <!---->
  </button>
  
</div>
`;

exports[`Button.svelte > should render a button with outline style 1`] = `
<div>
  <button
    class="flex flex-row items-center "
    type="submit"
  >
    <!---->
     
    <!---->
    <p>
      Outline
    </p>
    
    <!---->
     
    <!---->
  </button>
  
</div>
`;
